{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 157,
  "lineage": "37fd614b-5917-db3d-836f-1985a2e98f6c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-0aa052a684e02e082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/19",
            "default_for_az": false,
            "id": "subnet-0aa052a684e02e082",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "state": "available",
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2a",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-03626e281b28e0a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.160.0/19",
            "default_for_az": false,
            "id": "subnet-03626e281b28e0a4a",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "state": "available",
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2b",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-06dc4b82c7083aebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.192.0/19",
            "default_for_az": false,
            "id": "subnet-06dc4b82c7083aebf",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "state": "available",
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2c",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-0a6456309a706fd76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "id": "subnet-0a6456309a706fd76",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "state": "available",
            "tags": {
              "Name": "support-openshift-rwtsm-public-us-east-2a",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-09ec65626949ff785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "id": "subnet-09ec65626949ff785",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "state": "available",
            "tags": {
              "Name": "support-openshift-rwtsm-public-us-east-2b",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-0fecbec37daabbd0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "id": "subnet-0fecbec37daabbd0a",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "state": "available",
            "tags": {
              "Name": "support-openshift-rwtsm-public-us-east-2c",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:vpc/vpc-08d44401cdbd30452",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09dc48715350b9dd2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-00ead11a61f3d067f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08d44401cdbd30452",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a30cd66e4839373",
            "owner_id": "524466471676",
            "state": "available",
            "tags": {
              "Name": "support-openshift-rwtsm-vpc",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-001c6bb3ca66c5cde",
            "public_dns": "ec2-13-59-33-20.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.33.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "support-openshift-rwtsm-eip-us-east-2a",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00eb9027520fda0e0",
            "public_dns": "ec2-3-16-134-194.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.134.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "support-openshift-rwtsm-eip-us-east-2b",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0acdb1a11e4806e50",
            "public_dns": "ec2-3-132-29-212.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.29.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "support-openshift-rwtsm-eip-us-east-2c",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c84b5c5255ec4777",
            "arn": "arn:aws:ec2:us-east-2:524466471676:instance/i-0248d25f5cfb29964",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "support-openshift-rwtsm-master-profile",
            "id": "i-0248d25f5cfb29964",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0fa5b14df27a18936"
              }
            ],
            "primary_network_interface_id": "eni-0fa5b14df27a18936",
            "private_dns": "ip-10-0-132-233.us-east-2.compute.internal",
            "private_ip": "10.0.132.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-2:524466471676:key/10f08de4-2bae-418b-b97d-98b4e4406d61",
                "volume_id": "vol-02e0262736f60736a",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa052a684e02e082",
            "tags": {
              "Name": "support-openshift-rwtsm-master-0",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "support-openshift-rwtsm-master-0-vol",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_security_group_ids": [
              "sg-07640434bc2e7af2b"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c84b5c5255ec4777",
            "arn": "arn:aws:ec2:us-east-2:524466471676:instance/i-0f71521b68a8df8eb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "support-openshift-rwtsm-master-profile",
            "id": "i-0f71521b68a8df8eb",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0428954ba1af3f754"
              }
            ],
            "primary_network_interface_id": "eni-0428954ba1af3f754",
            "private_dns": "ip-10-0-171-220.us-east-2.compute.internal",
            "private_ip": "10.0.171.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-2:524466471676:key/10f08de4-2bae-418b-b97d-98b4e4406d61",
                "volume_id": "vol-0c9abf29f7c87721c",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03626e281b28e0a4a",
            "tags": {
              "Name": "support-openshift-rwtsm-master-1",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "support-openshift-rwtsm-master-1-vol",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_security_group_ids": [
              "sg-07640434bc2e7af2b"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c84b5c5255ec4777",
            "arn": "arn:aws:ec2:us-east-2:524466471676:instance/i-052518e66485dd88f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "support-openshift-rwtsm-master-profile",
            "id": "i-052518e66485dd88f",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07ca3f8631f7516b0"
              }
            ],
            "primary_network_interface_id": "eni-07ca3f8631f7516b0",
            "private_dns": "ip-10-0-213-0.us-east-2.compute.internal",
            "private_ip": "10.0.213.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-2:524466471676:key/10f08de4-2bae-418b-b97d-98b4e4406d61",
                "volume_id": "vol-0e104788d93c5f0d2",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dc4b82c7083aebf",
            "tags": {
              "Name": "support-openshift-rwtsm-master-2",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "support-openshift-rwtsm-master-2-vol",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_security_group_ids": [
              "sg-07640434bc2e7af2b"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:internet-gateway/igw-046c51a7c4184fbd2",
            "id": "igw-046c51a7c4184fbd2",
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-igw",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:loadbalancer/net/support-openshift-rwtsm-ext/f49b0fb188d3e5b0",
            "arn_suffix": "net/support-openshift-rwtsm-ext/f49b0fb188d3e5b0",
            "dns_name": "support-openshift-rwtsm-ext-f49b0fb188d3e5b0.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:loadbalancer/net/support-openshift-rwtsm-ext/f49b0fb188d3e5b0",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "support-openshift-rwtsm-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09ec65626949ff785"
              },
              {
                "subnet_id": "subnet-0a6456309a706fd76"
              },
              {
                "subnet_id": "subnet-0fecbec37daabbd0a"
              }
            ],
            "subnets": [
              "subnet-09ec65626949ff785",
              "subnet-0a6456309a706fd76",
              "subnet-0fecbec37daabbd0a"
            ],
            "tags": {
              "Name": "support-openshift-rwtsm-ext",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-08d44401cdbd30452",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:loadbalancer/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a",
            "arn_suffix": "net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a",
            "dns_name": "support-openshift-rwtsm-int-08ee7d9e4bf5cf0a.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:loadbalancer/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "support-openshift-rwtsm-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03626e281b28e0a4a"
              },
              {
                "subnet_id": "subnet-06dc4b82c7083aebf"
              },
              {
                "subnet_id": "subnet-0aa052a684e02e082"
              }
            ],
            "subnets": [
              "subnet-03626e281b28e0a4a",
              "subnet-06dc4b82c7083aebf",
              "subnet-0aa052a684e02e082"
            ],
            "tags": {
              "Name": "support-openshift-rwtsm-int",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-08d44401cdbd30452",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:listener/net/support-openshift-rwtsm-ext/f49b0fb188d3e5b0/6b58902bb0fcd5e4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:listener/net/support-openshift-rwtsm-ext/f49b0fb188d3e5b0/6b58902bb0fcd5e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:loadbalancer/net/support-openshift-rwtsm-ext/f49b0fb188d3e5b0",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:listener/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a/8df02d016a136ae0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:listener/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a/8df02d016a136ae0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:loadbalancer/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:listener/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a/959cf27c361d3329",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:listener/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a/959cf27c361d3329",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:loadbalancer/net/support-openshift-rwtsm-int/08ee7d9e4bf5cf0a",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38",
            "arn_suffix": "targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38",
            "lambda_multi_value_headers_enabled": false,
            "name": "support-openshift-rwtsm-aext",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "support-openshift-rwtsm-aext",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890",
            "arn_suffix": "targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890",
            "lambda_multi_value_headers_enabled": false,
            "name": "support-openshift-rwtsm-aint",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "support-openshift-rwtsm-aint",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5",
            "arn_suffix": "targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5",
            "lambda_multi_value_headers_enabled": false,
            "name": "support-openshift-rwtsm-sint",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "support-openshift-rwtsm-sint",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890-2021041523043175720000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890",
            "target_id": "10.0.132.233"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5-2021041523043170670000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5",
            "target_id": "10.0.132.233"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38-20210415230431155000000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38",
            "target_id": "10.0.132.233"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890-2021041523043170810000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890",
            "target_id": "10.0.171.220"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5-2021041523043124420000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5",
            "target_id": "10.0.171.220"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38-20210415230431166700000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38",
            "target_id": "10.0.171.220"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890-2021041523043181410000000f",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aint/6f60eb33eaf86890",
            "target_id": "10.0.213.0"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5-20210415230431155000000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-sint/1971b8dfd74468d5",
            "target_id": "10.0.213.0"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38-2021041523043123370000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:524466471676:targetgroup/support-openshift-rwtsm-aext/3d369e6891caac38",
            "target_id": "10.0.213.0"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc040a539776a59c",
            "original_route_table_id": "rtb-08ed481469a6fd2b2",
            "route_table_id": "rtb-09a30cd66e4839373",
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001c6bb3ca66c5cde",
            "id": "nat-05259ea4e5f3533dd",
            "network_interface_id": "eni-0ca46931154730e14",
            "private_ip": "10.0.24.242",
            "public_ip": "13.59.33.20",
            "subnet_id": "subnet-0a6456309a706fd76",
            "tags": {
              "Name": "support-openshift-rwtsm-nat-us-east-2a",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00eb9027520fda0e0",
            "id": "nat-085086646a24b0f5f",
            "network_interface_id": "eni-04768c1746db35dbd",
            "private_ip": "10.0.57.145",
            "public_ip": "3.16.134.194",
            "subnet_id": "subnet-09ec65626949ff785",
            "tags": {
              "Name": "support-openshift-rwtsm-nat-us-east-2b",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acdb1a11e4806e50",
            "id": "nat-0de35276d200f71fb",
            "network_interface_id": "eni-082cb11f95dfc8866",
            "private_ip": "10.0.71.40",
            "public_ip": "3.132.29.212",
            "subnet_id": "subnet-0fecbec37daabbd0a",
            "tags": {
              "Name": "support-openshift-rwtsm-nat-us-east-2c",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0fa5b14df27a18936",
            "mac_address": "02:14:af:ca:50:ec",
            "private_dns_name": "ip-10-0-132-233.us-east-2.compute.internal",
            "private_ip": "10.0.132.233",
            "private_ips": [
              "10.0.132.233"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07640434bc2e7af2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa052a684e02e082",
            "tags": {
              "Name": "support-openshift-rwtsm-master-0",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0428954ba1af3f754",
            "mac_address": "06:76:c5:e3:f7:06",
            "private_dns_name": "ip-10-0-171-220.us-east-2.compute.internal",
            "private_ip": "10.0.171.220",
            "private_ips": [
              "10.0.171.220"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07640434bc2e7af2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03626e281b28e0a4a",
            "tags": {
              "Name": "support-openshift-rwtsm-master-1",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "eni-07ca3f8631f7516b0",
            "mac_address": "0a:25:a3:ed:c8:90",
            "private_dns_name": "ip-10-0-213-0.us-east-2.compute.internal",
            "private_ip": "10.0.213.0",
            "private_ips": [
              "10.0.213.0"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07640434bc2e7af2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dc4b82c7083aebf",
            "tags": {
              "Name": "support-openshift-rwtsm-master-2",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-046c51a7c4184fbd2",
            "id": "r-rtb-09a30cd66e48393731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a30cd66e4839373",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089e2cc26225e0d6d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05259ea4e5f3533dd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089e2cc26225e0d6d",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c391e9a1b047c401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-085086646a24b0f5f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c391e9a1b047c40",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee0caca28f40ddab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0de35276d200f71fb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee0caca28f40ddab",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09a30cd66e4839373",
            "owner_id": "524466471676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "support-openshift-rwtsm-public",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-089e2cc26225e0d6d",
            "owner_id": "524466471676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2a",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07c391e9a1b047c40",
            "owner_id": "524466471676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2b",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee0caca28f40ddab",
            "owner_id": "524466471676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2c",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dda3e02369eddcb",
            "route_table_id": "rtb-089e2cc26225e0d6d",
            "subnet_id": "subnet-0aa052a684e02e082"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae48b36fa2a44fb",
            "route_table_id": "rtb-07c391e9a1b047c40",
            "subnet_id": "subnet-03626e281b28e0a4a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091def9e8a75d725b",
            "route_table_id": "rtb-0ee0caca28f40ddab",
            "subnet_id": "subnet-06dc4b82c7083aebf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e56386c2ffae575",
            "route_table_id": "rtb-09a30cd66e4839373",
            "subnet_id": "subnet-0a6456309a706fd76"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c131677b19718750",
            "route_table_id": "rtb-09a30cd66e4839373",
            "subnet_id": "subnet-09ec65626949ff785"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e59dd7a10e9d0df",
            "route_table_id": "rtb-09a30cd66e4839373",
            "subnet_id": "subnet-0fecbec37daabbd0a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:security-group/sg-07640434bc2e7af2b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07640434bc2e7af2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22623,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22623
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 4500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 6081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 6642
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00d397c12af378c8f"
                ],
                "self": true,
                "to_port": 9999
              }
            ],
            "name": "terraform-20210415230313747600000001",
            "name_prefix": null,
            "owner_id": "524466471676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "support-openshift-rwtsm-master-sg",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:security-group/sg-00d397c12af378c8f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00d397c12af378c8f",
            "ingress": [],
            "name": "terraform-20210415230313748400000002",
            "name_prefix": null,
            "owner_id": "524466471676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "support-openshift-rwtsm-worker-sg",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1392385187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-206806738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1593576333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-2798243913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2942455687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-4258126552",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-3882350007",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1974815157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-3376368262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-2609962969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-2557468179",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-3401599820",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1475733201",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-89813902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2701512801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-4088022334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-751261621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-2120794858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-3964351286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-3202655849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2704926420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-4086723467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-4010766606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-3181438033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1121231709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-276510210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3867869362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3022296557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3103473687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-598359743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-1896197088",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": "sg-00d397c12af378c8f",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22623,
            "id": "sgrule-3090504740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07640434bc2e7af2b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-911057393",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3272502581",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2443311210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-3371793173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2589388362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-519548339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-749812237",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-2115940178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-4294240897",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-812569155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1656833820",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3332302067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2486268332",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-739474626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2126309789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-2908454878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3489544523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2639375380",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1805752996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-957222907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2612103194",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-1144064557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-379494258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00d397c12af378c8f",
            "self": false,
            "source_security_group_id": "sg-07640434bc2e7af2b",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-0aa052a684e02e082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-0aa052a684e02e082",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2a",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-03626e281b28e0a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.160.0/19",
            "id": "subnet-03626e281b28e0a4a",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2b",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-06dc4b82c7083aebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.192.0/19",
            "id": "subnet-06dc4b82c7083aebf",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-private-us-east-2c",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-0a6456309a706fd76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0a6456309a706fd76",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-public-us-east-2a",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-09ec65626949ff785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-09ec65626949ff785",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-public-us-east-2b",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:subnet/subnet-0fecbec37daabbd0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-0fecbec37daabbd0a",
            "map_public_ip_on_launch": false,
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-public-us-east-2c",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:524466471676:vpc/vpc-08d44401cdbd30452",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0323a89aa700addc7",
            "default_route_table_id": "rtb-09a30cd66e4839373",
            "default_security_group_id": "sg-0f03165af6f388e3a",
            "dhcp_options_id": "dopt-00ead11a61f3d067f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08d44401cdbd30452",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a30cd66e4839373",
            "owner_id": "524466471676",
            "tags": {
              "Name": "support-openshift-rwtsm-vpc",
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.219.80.0/20",
              "3.5.128.0/22",
              "3.5.132.0/23",
              "52.219.96.0/20"
            ],
            "id": "vpce-0be47df14db4d084e",
            "owner_id": "524466471676",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07c391e9a1b047c40",
              "rtb-089e2cc26225e0d6d",
              "rtb-09a30cd66e4839373",
              "rtb-0ee0caca28f40ddab"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/support-openshift-rwtsm": "owned"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08d44401cdbd30452"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    }
  ]
}